# cinelerra5

./: README.md
cinelerra-5.1/: Cinelerra_factory  Makefile.am  Makefile.devel  autogen.sh  configure.ac  expanders.es  expanders.fr  expanders.txt  lv2_blacklist.txt  opencv_build  plugin_cuda  plugin_defs
cinelerra-5.1/blds/: PKGBUILD  bld_appimage.sh  bld_package.sh  bld_prepare.sh  bsd.bld  bsd.patch  cinelerra.spec  cygwin.bld  cygwin.patch  termux.bld
cinelerra-5.1/blds/debian/: changelog  control  rules
cinelerra-5.1/cinelerra/: Makefile  aautomation.C  aboutprefs.C  adeviceprefs.C  adeviceprefs.h  adeviceprefs.inc  affine.C  amodule.C  amodule.h  androidcontrol.C  apanel.C  apatchgui.C  apatchgui.h  apatchgui.inc  appearanceprefs.C  appearanceprefs.h  appearanceprefs.inc  asset.C  asset.h  asset.inc  assetedit.C  assetedit.h  assetedit.inc  assetpopup.C  assetpopup.h  assetpopup.inc  assetremove.C  atrack.C  atrack.h  attachmentpoint.C  attachmentpoint.h  audioalsa.C  audioalsa.h  audioconfig.C  audioconfig.h  audiodevice.C  audiodevice.h  audiodevice.inc  audioodevice.C  audiopulse.C  (+419 more)
cinelerra-5.1/db/: tdb.h
cinelerra-5.1/doc/: ContextManual.pl  Makefile  RenderMux.sh  ShellCmds.html  ShellCmds_en.html  ShellCmds_es.html  help_br_index.html  shortcuts.html
cinelerra-5.1/ffmpeg/: decode.opts  plugin.opts
cinelerra-5.1/ffmpeg/audio/: avi.dfl  avi_mp3.avi  avi_pcm_s16.avi  dca.qt  mpeg1_mp2.mpeg  mxf.dfl  mxf_pcm16.mxf  mxf_pcm24.mxf  pcm_s24.pro  user_flac.flac  user_s16le.mka  user_s16le.mkv  user_s16le.w64  user_s24le-2.mkv  user_s24le.mka  user_s24le.mkv  user_s24le.w64  user_s32le.mka  user_s32le.mkv  user_s32le.w64
cinelerra-5.1/ffmpeg/format/: bluray
cinelerra-5.1/ffmpeg/video/: CineformHD.mov  DPX.dpx  asv1.avi  asv2.avi  av1.webm  avc422.m2ts  avi.dfl  bluray.m2ts  bluray_bff.m2ts  bluray_dv_ntsc.m2ts  bluray_dv_pal.m2ts  bluray_fakeinterlace.m2ts  bluray_lo.m2ts  bluray_tff.m2ts  cinepak.qt  div3.qt  div3v2.qt  div5.qt  dnxhd.qt  dnxhr_444.mov  dnxhr_hq.mov  dnxhr_hqx.mov  dnxhr_lb.mov  dnxhr_sq.mov  dv_ntsc.avi  dv_pal.avi  dv_pal.qt  dvd.dvd  faststart_h264.qt  ffv1.avi  ffv1.mov  flv_h264.flv  h263.mov  h263p.mov  h264.f4v  hd.youtube  hd_h264.youtube  huffyuv_screencapture.mov  magicyuv.qt  mjpeg.avi  (+67 more)
cinelerra-5.1/guicast/: Makefile  arraylist.h  bcbitmap.C  bcbitmap.h  bcbutton.C  bcbutton.h  bcclipboard.C  bccmdl.py  bccmodels.C  bccmodels.h  bccolors.C  bccolors.h  bccolors.inc  bcdelete.C  bcdisplay.C  bcdisplayinfo.C  bcdisplayinfo.h  bcdragbox.C  bcdragbox.h  bcdragbox.inc  bcfilebox.C  bcfilebox.h  bclistbox.C  bclistbox.h  bclistbox.inc  bcmenu.C  bcmenubar.C  bcmenuitem.C  bcmenuitem.h  bcmenupopup.C  bcmenupopup.h  bcmeter.C  bcmeter.h  bcnewfolder.C  bcpan.C  bcpbuffer.C  bcpixmap.C  bcpopupmenu.C  bcpot.C  bcprogressbox.C  (+52 more)
cinelerra-5.1/info/: plugins.txt
cinelerra-5.1/libzmpeg3/: Makefile  libzmpeg3.h  xfont.C  zio.C
cinelerra-5.1/libzmpeg3/audio/: audio.C
cinelerra-5.1/libzmpeg3/video/: reconstruct.C  slice.C
cinelerra-5.1/mpeg2enc/: dist2_mmx.s  global.h  mblock_sad_mmx.s  mblock_sad_mmxe.s  mblockq_sad_mmxe.s  mpeg2enc.c  predcomp_mmx.s  predcomp_mmxe.s  predict_mmx.s  putseq.c  quant_mmx.s  quantize.c
cinelerra-5.1/msg/: txt
cinelerra-5.1/plugins/: Makefile
cinelerra-5.1/plugins/1080to480/: 1080to480.C
cinelerra-5.1/plugins/1080to540/: 1080to540.C
cinelerra-5.1/plugins/720to480/: 720to480.C
cinelerra-5.1/plugins/C41/: c41.C
cinelerra-5.1/plugins/aging/: agingwindow.C
cinelerra-5.1/plugins/alpha/: Makefile  alpha.C  alpha.h
cinelerra-5.1/plugins/audioscope/: audioscope.C
cinelerra-5.1/plugins/bandslide/: bandslide.C
cinelerra-5.1/plugins/bandwipe/: bandwipe.C
cinelerra-5.1/plugins/bluebanana/: bluebananawindow.C
cinelerra-5.1/plugins/blur/: blurwindow.C
cinelerra-5.1/plugins/blurzoom/: blurzoomwindow.C
cinelerra-5.1/plugins/boxblur/: Makefile  boxblur.C
cinelerra-5.1/plugins/brightness/: brightness.C  brightnesswindow.C  brightnesswindow.h
cinelerra-5.1/plugins/burn/: burnwindow.C
cinelerra-5.1/plugins/cdripper/: cdripwindow.C
cinelerra-5.1/plugins/chorus/: Makefile  chorus.C
cinelerra-5.1/plugins/chromakey/: chromakey.C
cinelerra-5.1/plugins/chromakeyhsv/: chromakey.C
cinelerra-5.1/plugins/color3way/: color3way.C  color3waywindow.C
cinelerra-5.1/plugins/colorbalance/: colorbalance.C  colorbalancewindow.C
cinelerra-5.1/plugins/colorspace/: Makefile  colorspace.C  colorspace.h  colorspacewindow.C  colorspacewindow.h
cinelerra-5.1/plugins/compressor/: Makefile  compressor.C  compressor.h
cinelerra-5.1/plugins/compressormulti/: Makefile  comprmulti.C  comprmulti.h  comprmultigui.C  comprmultigui.h
cinelerra-5.1/plugins/crikey/: crikey.C  crikey.h  crikeywindow.C  crikeywindow.h
cinelerra-5.1/plugins/crop/: Makefile  crop.C  crop.h  cropwin.C  cropwin.h
cinelerra-5.1/plugins/decimate/: decimate.C
cinelerra-5.1/plugins/deinterlace/: deinterlace.C  deinterwindow.C
cinelerra-5.1/plugins/deinterlace-cv/: deinterwindow-cv.C
cinelerra-5.1/plugins/delayaudio/: delayaudio.C
cinelerra-5.1/plugins/delayvideo/: delayvideo.C
cinelerra-5.1/plugins/denoise/: denoise.C
cinelerra-5.1/plugins/denoisefft/: denoisefft.C
cinelerra-5.1/plugins/denoisemjpeg/: denoisemjpeg.C
cinelerra-5.1/plugins/denoiseseltempavg/: seltempavg.C  seltempavgwindow.C
cinelerra-5.1/plugins/denoisevideo/: denoisevideo.C
cinelerra-5.1/plugins/descratch/: descratch.C
cinelerra-5.1/plugins/despike/: despikewindow.C
cinelerra-5.1/plugins/diffkey/: diffkey.C
cinelerra-5.1/plugins/dot/: dotwindow.C
cinelerra-5.1/plugins/downsample/: downsample.C
cinelerra-5.1/plugins/echo/: echo.C
cinelerra-5.1/plugins/echocancel/: echocancel.C
cinelerra-5.1/plugins/edge/: edgewindow.C
cinelerra-5.1/plugins/fieldframe/: fieldframe.C
cinelerra-5.1/plugins/findobj/: findobj.C  (+2 more)
cinelerra-5.1/po/: Makefile  cin.po  de.po  es.po  fr.po  hu.po  it.po  ru.po  xlat.sh
cinelerra-5.1/prof2/: Makefile  mksyscallent  prof.c  profile.c  smap.C  tst.c
cinelerra-5.1/tips/: tips.en  tips.es  tips.ru
(+210 files in other folders)
